--- a/src/html/index.hbs
+++ b/src/html/index.hbs
@@ -2,6 +2,7 @@
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
+        <title>{{htmlWebpackPlugin.options.title}}</title>
         <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
         <style>
 
